--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
     <img src="images/shapla.jpg" alt="" srcset="">
     <img src="images/vegetaball.jpg" alt="" srcset="">
     <img src="images/vegetaball.jpg" alt="" srcset="">
+    <img src="images/fish.jpg" alt="" srcset="">
+    <img src="images/pizza.jpg" alt="" srcset="">
+    <img src="images/shapla.jpg" alt="" srcset="">
+    <img src="images/vegetaball.jpg" alt="" srcset="">
+    <img src="images/vegetaball.jpg" alt="" srcset="">
 
   </div>
 </body>
