--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <img src="images/pizza.jpg" alt="" srcset="">
     <img src="images/shapla.jpg" alt="" srcset="">
     <img src="images/vegetaball.jpg" alt="" srcset="">
+      <img src="images/vegetaball.jpg" alt="" srcset="">
   </div>
 </body>
 
